--- a/src/partials/sections/telegram.html
+++ b/src/partials/sections/telegram.html
@@ -1,7 +1,7 @@
 <section class="section">
   <div class="container">
     <div class="banner">
-      <picture class="mb-n32px my-md-n32px ms-n48px me-n80px mx-md-n56px mx-lg-n48px banner-animate banner-animate--start">
+      <picture class="ms-n32px mb-n20px my-md-n32px mx-md-n56px mx-lg-n48px banner-animate banner-animate--start">
         <source srcset="./img/telegram/image-1.webp" type="image/webp">
         <img loading="lazy" src="./img/telegram/image-1.png" class="img-fluid" width="440" height="300" alt="Картинка">
       </picture>
@@ -18,14 +18,14 @@
           </span>
         </button>
       </div>
-      <picture class="mt-n48px mt-md-0px mx-n72px mx-md-n16px mx-lg-0px banner-animate banner-animate--end">
+      <picture class="mx-md-n16px mx-lg-0px banner-animate banner-animate--end">
         <source
-          srcset="./img/telegram/image-1.webp"
+          srcset="./img/telegram/image-2--mobile.webp"
           type="image/webp"
           media="(max-width: 767.98px)"
         />
         <source
-          srcset="./img/telegram/image-1.png"
+          srcset="./img/telegram/image-2--mobile.png"
           type="image/png"
           media="(max-width: 767.98px)"
         />
