--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,12 +9,14 @@
 // Components
 @import "./components/section";
 @import "./components/icons";
+@import "./components/glass";
 @import "./components/header";
 @import "./components/separator";
 @import "./components/br";
 @import "./components/view-content";
 @import "./components/banner";
 @import "./components/counter";
+@import "./components/nouislider";
 @import "./components/choices";
 @import "./components/swipers";
 @import "./components/footer";
