--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -12,5 +12,7 @@
 // стили для свайпера
 @import "../../node_modules/swiper/swiper-bundle.min";
 
+@import '../../node_modules/nouislider/dist/nouislider.min';
+
 // стили для скролла simplebar
 // @import "../../node_modules/simplebar/dist/simplebar.min";
