--- a/src/scss/bootstrap/_offcanvas.scss
+++ b/src/scss/bootstrap/_offcanvas.scss
@@ -141,3 +141,109 @@
   padding: var(--#{$prefix}offcanvas-padding-y) var(--#{$prefix}offcanvas-padding-x);
   overflow-y: auto;
 }
+
+
+
+.offcanvas--filter {
+
+  .offcanvas-header {
+
+    .btn-close {
+      --#{$prefix}btn-border-width: 0;
+      --#{$prefix}btn-padding-y: 0;
+      --#{$prefix}btn-padding-x: 0;
+
+      --#{$prefix}btn-border-color: transparent;
+
+      margin: 0;
+    }
+  }
+
+  .offcanvas-title {
+    flex: 1 1 auto;
+    text-align: center;
+  }
+
+  .accordion-header {
+
+    @include media-breakpoint-down(lg) {
+      display: none;
+    }
+  }
+
+  .accordion-collapse {
+    @include media-breakpoint-down(lg) {
+      display: block;
+    }
+  }
+
+  .accordion-body {
+
+    @include media-breakpoint-down(lg) {
+      padding: 0;
+    }
+  }
+
+  .accordion-item {
+
+    & + .accordion-item {
+
+      &::after {
+        @include media-breakpoint-down(lg) {
+          all: unset;
+        }
+      }
+    }
+  }
+
+  .form-control {
+
+    @include media-breakpoint-down(lg) {
+      background-color: var(--#{$prefix}white);
+    }
+  }
+
+  .form-check {
+
+    &-input {
+
+      @include media-breakpoint-down(lg) {
+        display: none;
+      }
+
+
+      &:checked {
+
+        + .form-check-label {
+
+          @include media-breakpoint-down(lg) {
+            color: var(--#{$prefix}body-bg);
+            background-color: var(--#{$prefix}teal-400);
+            border-color: var(--#{$prefix}teal-400);
+          }
+        }
+      }
+    }
+
+    &-label {
+
+      @include media-breakpoint-down(lg) {
+        display: inline-flex;
+        font-size: .75rem;
+        font-weight: 500;
+        border: var(--#{$prefix}border-width) solid var(--#{$prefix}border-color);
+        border-radius: 2rem;
+        padding: .25rem 1.25rem;
+      }
+    }
+  }
+
+  .separator + .separator {
+
+    &::after {
+      @include media-breakpoint-down(lg) {
+        all: unset;
+      }
+    }
+  }
+}
