--- a/src/scss/bootstrap/_utilities.scss
+++ b/src/scss/bootstrap/_utilities.scss
@@ -52,6 +52,7 @@ $utilities: map-merge(
     // scss-docs-start utils-overflow
     "overflow": (
       property: overflow,
+      responsive: true,
       values: auto hidden visible scroll,
     ),
     "overflow-x": (
@@ -75,11 +76,12 @@ $utilities: map-merge(
     // scss-docs-start utils-shadow
     "shadow": (
       property: box-shadow,
+      responsive: true,
       class: shadow,
       values: (
         null: var(--#{$prefix}box-shadow),
-        sm: var(--#{$prefix}box-shadow-sm),
-        lg: var(--#{$prefix}box-shadow-lg),
+        1: var(--#{$prefix}box-shadow-sm),
+        2: var(--#{$prefix}box-shadow-lg),
         none: none,
       )
     ),
@@ -126,6 +128,15 @@ $utilities: map-merge(
         null: translate(-50%, -50%),
         x: translateX(-50%),
         y: translateY(-50%),
+      )
+    ),
+    "blur": (
+      property: filter,
+      responsive: true,
+      class: blur,
+      values: (
+        null: blur(1rem),
+        '600px': blur(37.5rem),
       )
     ),
     // scss-docs-end utils-position
@@ -202,13 +213,17 @@ $utilities: map-merge(
     // scss-docs-start utils-sizing
     "width": (
       property: width,
+      responsive: true,
       class: w,
-      values: (
-        25: 25%,
-        50: 50%,
-        75: 75%,
-        100: 100%,
-        auto: auto
+      values: map-merge(
+        $sizes,
+        (
+          25: 25%,
+          50: 50%,
+          75: 75%,
+          100: 100%,
+          auto: auto
+        )
       )
     ),
     "max-width": (
@@ -255,12 +270,15 @@ $utilities: map-merge(
       property: height,
       responsive: true,
       class: h,
-      values: (
-        25: 25%,
-        50: 50%,
-        75: 75%,
-        100: 100%,
-        auto: auto
+      values: map-merge(
+        $sizes,
+        (
+          25: 25%,
+          50: 50%,
+          75: 75%,
+          100: 100%,
+          auto: auto
+        )
       )
     ),
     "max-height": (
@@ -726,6 +744,7 @@ $utilities: map-merge(
     // scss-docs-start utils-bg-color
     "background-color": (
       property: background-color,
+      responsive: true,
       class: bg,
       local-vars: (
         "bg-opacity": 1
@@ -773,6 +792,7 @@ $utilities: map-merge(
     ),
     "bg-opacity": (
       css-var: true,
+      responsive: true,
       class: bg-opacity,
       values: (
         5: .05,
@@ -791,10 +811,14 @@ $utilities: map-merge(
     // scss-docs-end utils-bg-color
     "gradient": (
       property: background-image,
+      responsive: true,
       class: bg,
       values: (
+        reset: none,
         gradient: var(--#{$prefix}gradient),
-        gradient-hero: var(--#{$prefix}gradient-hero),
+        gradient-hero-top: var(--#{$prefix}gradient-hero-top),
+        gradient-hero-bottom: var(--#{$prefix}gradient-hero-bottom),
+        gradient-light: var(--#{$prefix}gradient-light),
       )
     ),
     // scss-docs-start utils-interaction
