--- a/src/scss/components/_banner.scss
+++ b/src/scss/components/_banner.scss
@@ -1,16 +1,18 @@
 .banner {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  flex-direction: column;
   color: var(--#{$prefix}white);
   background-color: #1f1f1f;
   border-radius: 1rem;
+  padding: 1.5rem calc(var(--#{$prefix}gutter-x) * .5);
   position: relative;
   overflow: hidden;
 
   @include media-breakpoint-up(md) {
+    flex-direction: row;
     align-items: flex-end;
+    justify-content: space-between;
+    padding: 0;
   }
 
   @media (hover: hover) {
@@ -28,7 +30,7 @@
     img {
 
       @include media-breakpoint-down(md) {
-        max-width: 8.75rem;
+        max-width: 7.5rem;
       }
     }
 
@@ -43,6 +45,13 @@
       @media (hover: hover) {
         transform: translateX(-50%);
       }
+
+      img {
+
+        @include media-breakpoint-down(md) {
+          max-width: 12.5rem;
+        }
+      }
     }
 
     &--end {
@@ -50,29 +59,62 @@
       @media (hover: hover) {
         transform: translateX(50%);
       }
+
+      @include media-breakpoint-down(md) {
+        position: absolute;
+        bottom: -3rem;
+        right: calc(var(--#{$prefix}gutter-x) * .5);
+      }
     }
   }
 
   &-content {
+    max-width: max-content;
     display: flex;
     flex-direction: column;
-    align-self: center;
-    align-items: center;
-    text-align: center;
-    padding: 1.25rem calc(var(--#{$prefix}gutter-x) * .5);
+    gap: 1rem;
+    order: -10;
+    position: relative;
+    z-index: 1;
+
+    @include media-breakpoint-up(md) {
+      max-width: 100%;
+      align-self: center;
+      align-items: center;
+      gap: 1.25rem;
+      text-align: center;
+      padding: 1.25rem calc(var(--#{$prefix}gutter-x) * .5);
+      order: initial;
+    }
 
     h4 {
-      font-size: 1.5rem;
-      font-weight: 600;
+      font-size: 1.25rem;
+      font-weight: 500;
       line-height: normal;
-      margin-bottom: 1.25rem;
-
-      @include media-breakpoint-up(md) {
-      }
+      margin: 0;
 
       @include media-breakpoint-up(lg) {
         font-size: 2rem;
-        margin-bottom: 2rem;
+        font-weight: 600;
+      }
+    }
+  }
+
+  .btn-40px {
+
+    @include media-breakpoint-down(md) {
+      --#{$prefix}btn-font-size: .625rem;
+      --#{$prefix}btn-padding-y: .25rem;
+      --#{$prefix}btn-padding-x: .875rem;
+
+      height: 1.75rem;
+      gap: .25rem;
+    }
+
+    .icon {
+
+      @include media-breakpoint-down(md) {
+        --_size: .75rem;
       }
     }
   }
