--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -8429,10 +8429,16 @@ textarea.form-control-lg {
 }
 
 .alert-heading {
+  max-width: 9rem;
   font-size: 0.75rem;
   font-weight: 600;
   color: inherit;
   margin: 0;
+}
+@media (min-width: 992px) {
+  .alert-heading {
+    max-width: 100%;
+  }
 }
 
 .alert-link {
@@ -8457,26 +8463,19 @@ textarea.form-control-lg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  gap: 0.375rem;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  gap: 1rem;
   font-size: 0.625rem;
   color: var(--bs-white);
 }
 @media (min-width: 992px) {
   .alert-content {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+    gap: 0.375rem;
     text-align: center;
   }
 }
@@ -8485,7 +8484,7 @@ textarea.form-control-lg {
 }
 
 .alert-btn {
-  --bs-btn-font-size: .625rem;
+  --bs-btn-font-size: .5rem;
   --bs-btn-font-weight: 600;
   --bs-btn-border-radius: 1.25rem;
   --bs-btn-color: var(--bs-white);
@@ -8507,9 +8506,16 @@ textarea.form-control-lg {
   -ms-flex-pack: center;
   justify-content: center;
   gap: 0.375rem;
-  white-space: nowrap;
+  text-align: end;
   padding-right: 0.375rem;
   backdrop-filter: blur(0.125rem);
+}
+@media (min-width: 992px) {
+  .alert-btn {
+    --bs-btn-font-size: .625rem;
+    white-space: nowrap;
+    text-align: inherit;
+  }
 }
 
 .alert-dismissible {
