--- a/src/scss/bootstrap/_root.scss
+++ b/src/scss/bootstrap/_root.scss
@@ -49,6 +49,7 @@
   --#{$prefix}gradient-hero-top: #{$gradient-hero-top};
   --#{$prefix}gradient-hero-bottom: #{$gradient-hero-bottom};
   --#{$prefix}gradient-light: #{$gradient-light};
+  --#{$prefix}gradient-light-60: #{$gradient-light-60};
 
   // Root and body
   // scss-docs-start root-body-variables
