--- a/src/scss/bootstrap/_buttons.scss
+++ b/src/scss/bootstrap/_buttons.scss
@@ -180,6 +180,27 @@
   box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
 }
 
+.btn-gradient-outline-teal {
+  --#{$prefix}btn-color: var(--#{$prefix}white);
+  --#{$prefix}btn-hover-color: var(--#{$prefix}white);
+  --#{$prefix}btn-active-color: var(--#{$prefix}white);
+
+  --#{$prefix}btn-bg: linear-gradient(90deg, transparent 0%, transparent 50%, transparent 100%);
+  --#{$prefix}btn-hover-bg: linear-gradient(90deg, var(--#{$prefix}teal) 0%, var(--#{$prefix}teal-400) 50%, var(--#{$prefix}teal) 100%);
+  --#{$prefix}btn-active-bg: linear-gradient(90deg, transparent 0%, transparent 50%, transparent 100%);
+
+  --#{$prefix}btn-border-color: linear-gradient(90deg, var(--#{$prefix}white) 0%, var(--#{$prefix}white) 50%, var(--#{$prefix}white) 100%);
+  --#{$prefix}btn-hover-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+  --#{$prefix}btn-active-border-color: linear-gradient(90deg, #ADADAD 0%, var(--#{$prefix}white) 50%, #ADADAD 100%);
+
+  @media (hover: hover) {
+
+    &:is(:hover, :focus-visible) {
+      box-shadow: inset 0 0 .875rem 0 rgba(var(--#{$prefix}white-rgb), .70), 0 .25rem 2rem 0 rgba(var(--#{$prefix}teal-rgb), .50);
+    }
+  }
+}
+
 .btn-gradient-warm {
   --#{$prefix}btn-color: var(--#{$prefix}white);
   --#{$prefix}btn-hover-color: var(--#{$prefix}white);
@@ -202,7 +223,7 @@
   --#{$prefix}btn-active-color: var(--#{$prefix}black);
 
   --#{$prefix}btn-bg: transparent;
-  --#{$prefix}btn-hover-bg: var(--#{$prefix}gradient-light);
+  --#{$prefix}btn-hover-bg: var(--#{$prefix}gradient-light-60);
   --#{$prefix}btn-active-bg: transparent;
 
   --#{$prefix}btn-border-color: linear-gradient(90deg, rgba(var(--#{$prefix}black-rgb), 1) 0%, rgba(var(--#{$prefix}black-rgb), 1) 50%, rgba(var(--#{$prefix}black-rgb), 1) 100%);
@@ -214,34 +235,15 @@
     border-radius: 50rem;
   }
 
-  &.btn-has-icon {
-    padding-right: .25rem;
-    justify-content: space-between;
-
-    @include media-breakpoint-up(lg) {
-      padding-right: .375rem;
-    }
-  }
-
   @media (hover: hover) {
 
     &:is(:hover, :focus-visible) {
       box-shadow: 0 .75rem 1rem 0 rgba(var(--#{$prefix}black-rgb), .05), 0 .375rem 1rem 0 rgba(var(--#{$prefix}black-rgb), .20);
-    }
-  }
 
-  &.btn-40px {
+      .icon {
+        --_color: var(--#{$prefix}white);
 
-    .icon {
-      --_size: 1.5rem;
-
-      margin-block: -.25rem;
-      padding: .375rem;
-
-      @include media-breakpoint-up(lg) {
-        --_size: 1.75rem;
-
-        padding: .5rem;
+        background-image: radial-gradient(140% 140% at 55% 50%, var(--#{$prefix}black) 0%, rgba(var(--#{$prefix}gray-550-rgb), .15) 100%);
       }
     }
   }
@@ -602,19 +604,27 @@
 }
 
 .btn-40px {
-  --#{$prefix}btn-font-size: .625rem;
+  --#{$prefix}btn-font-size: .75rem;
   --#{$prefix}btn-font-weight: 500;
+  --#{$prefix}btn-line-height: normal;
   --#{$prefix}btn-border-width: .0625rem;
   --#{$prefix}btn-border-radius: 5rem;
   --#{$prefix}btn-padding-x: 1.375rem;
-  --#{$prefix}btn-padding-y: .5rem;
+  --#{$prefix}btn-padding-y: .25rem;
 
-  height: 2rem;
+  height: 2.5rem;
 
-  @include media-breakpoint-up(lg) {
-    --#{$prefix}btn-font-size: .75rem;
+  &.btn-has-icon {
+    text-align: start;
+    padding-right: .375rem;
+    justify-content: space-between;
+  }
 
-    height: 2.5rem;
+  .icon {
+    --_size: 1.75rem;
+
+    margin-block: -.25rem;
+    padding: .4375rem;
   }
 }
 
