--- a/src/scss/bootstrap/_utilities.scss
+++ b/src/scss/bootstrap/_utilities.scss
@@ -602,6 +602,7 @@ $utilities: map-merge(
       class: lh,
       values: (
         1: 1,
+        reset: inherit,
         normal: normal,
         sm: $line-height-sm,
         base: $line-height-base,
@@ -819,6 +820,7 @@ $utilities: map-merge(
         gradient-hero-top: var(--#{$prefix}gradient-hero-top),
         gradient-hero-bottom: var(--#{$prefix}gradient-hero-bottom),
         gradient-light: var(--#{$prefix}gradient-light),
+        gradient-light-60: var(--#{$prefix}gradient-light-60),
       )
     ),
     // scss-docs-start utils-interaction
