--- a/src/scss/bootstrap/_variables.scss
+++ b/src/scss/bootstrap/_variables.scss
@@ -426,6 +426,7 @@ $gradient-hero-bottom: linear-gradient(to bottom, #e9edf0 0%, #f3f5f7 60%, #c4d3
 $gradient-hero-top: linear-gradient(to top, #e9edf0 0%, #f3f5f7 60%, #c4d3dc 100%) !default;
 $gradient-warm: linear-gradient(90deg, #{$orange-600} 0%, #{$orange-300} 50%, #{$orange-600} 100%) !default;
 $gradient-light: linear-gradient(90deg, #{$white} 0%, #{$white} 50%, #{$gray-200} 100%) !default;
+$gradient-light-60: linear-gradient(90deg, rgba(var(--#{$prefix}white-rgb), .6) 0%, rgba(var(--#{$prefix}white-rgb), .6) 50%, rgba(var(--#{$prefix}gray-200-rgb), .6) 100%) !default;
 $gradient-border: linear-gradient(90deg, rgba(var(--#{$prefix}primary-rgb), 0) 0%, rgba(var(--#{$prefix}primary-rgb), 0.50) 50%, rgba(var(--#{$prefix}primary-rgb), 0) 100%) !default;
 // scss-docs-end variable-gradient
 
