--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,9 @@
 @import "./components/br";
 @import "./components/view-content";
 @import "./components/banner";
+@import "./components/offer";
+@import "./components/tool";
+@import "./components/new";
 @import "./components/counter";
 @import "./components/nouislider";
 @import "./components/choices";
